[build-system]
requires = ['setuptools >= 42', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = "visualisation"
version = "0.0.1"
description = "Package for data visualisation"
authors = [
    {name = "Andrea Braschi", email = "andreabraschi.11@gmail.com"},
]
maintainers = [
    { name = "Andrea Braschi", email = "andreabraschi.11@gmail.com"},
]
requires-python = ">=3"
dependencies = [
    "matplotlib",
    "seaborn",
    "scipy"
]

classifiers = [
    "Development Status :: Testing",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]